:bug: Input text on the form was white so it was invisible.

--- a/assets/src/sass/components/_wordpress.scss
+++ b/assets/src/sass/components/_wordpress.scss
@@ -38,7 +38,7 @@
   background-color: #eeeeee;
   border-radius: 8px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  color: #fdfbef;
+  color: #333333;
 }
 
 .gform_body input:focus {
